--- a/DB Shard Project/maxscale.cnf
+++ b/DB Shard Project/maxscale.cnf
@@ -10,8 +10,117 @@
 # Global parameters
 
 [maxscale]
-threads=auto
-# this enables external access to the REST API outside of localhost
-# please review / modify for any public / non development environments
-admin_host=0.0.0.0
+threads=16
+skip_permission_checks=true
+ 
+# Shard-A
+ 
+[Shard-A-Monitor]
+type=monitor
+module=mysqlmon
+servers=server1,server2
+user=maxmon
+passwd=DF5822F1038A154FEB68E667740B1160
+monitor_interval=10000
+ 
+[Shard-A-Router]
+type=service
+router=readwritesplit
+servers=server1,server2
+user=maxuser
+passwd=DF5822F1038A154FEB68E667740B1160
+ 
+[Shard-A-Listener]
+type=listener
+service=Shard-A-Router
+protocol=MySQLClient
+port=4006
+ 
+[server1]
+type=server
+address=192.168.50.11
+port=3306
+protocol=MySQLBackend
+ 
+[server2]
+type=server
+address=192.168.50.12
+port=3306
+protocol=MySQLBackend
+ 
+# Shard-B
+ 
+[Shard-B-Monitor]
+type=monitor
+module=mysqlmon
+servers=server3,server4
+user=maxmon
+passwd=DF5822F1038A154FEB68E667740B1160
+monitor_interval=10000
+ 
+[Shard-B-Router]
+type=service
+router=readwritesplit
+servers=server3,server4
+user=maxuser
+passwd=DF5822F1038A154FEB68E667740B1160
+ 
+[Shard-B-Listener]
+type=listener
+service=Shard-B-Router
+protocol=MySQLClient
+port=4007
+ 
+[server3]
+type=server
+address=192.168.50.13
+port=3306
+protocol=MySQLBackend
+ 
+[server4]
+type=server
+address=192.168.50.14
+port=3306
+protocol=MySQLBackend
+ 
+# The two services abstracted as servers
+ 
+[Shard-A]
+type=server
+address=127.0.0.1
+port=4006
+protocol=MySQLBackend
+ 
+[Shard-B]
+type=server
+address=127.0.0.1
+port=4007
+protocol=MySQLBackend
+ 
+# The sharding service
+ 
+[Sharding-Service]
+type=service
+router=schemarouter
+servers=Shard-A,Shard-B
+user=maxuser
+passwd=DF5822F1038A154FEB68E667740B1160
+router_options=refresh_interval=10
+ 
+[Sharding-Listener]
+type=listener
+service=Sharding-Service
+protocol=MySQLClient
+port=3306
+ 
+# Command line interface used by Maxadmin
+ 
+[CLI]
+type=service
+router=cli
 
+[CLI-Listener]
+type=listener
+service=CLI
+protocol=maxscaled
+socket=default
